--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -14,6 +14,8 @@
 #  created_at        :datetime         not null
 #  updated_at        :datetime         not null
 #  documents         :string
+#  status            :string
+#  handle            :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
