Update submission with POST to callback
If the submission exists and the status is valid and contains a handle
if appropriate, the submission is updated.

--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -16,6 +16,7 @@
 #  documents         :string
 #  status            :string
 #  handle            :string
+#  uuid              :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
