--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -26,6 +26,7 @@ sub_one:
   agreed_to_license: true
   documents: "[\"b_pdf.pdf\", \"a_pdf.pdf\"]"
   user: one
+  uuid: 7648b505-af79-4a2b-abcb-2727f716100c
 
 sub_two:
   title: 'Simple Secret Substitution Songs'
@@ -37,3 +38,4 @@ sub_two:
   grant_number: 'asdf123'
   agreed_to_license: true
   documents: "[\"b_pdf.pdf\"]"
+  uuid: a481170a-8337-4adc-b5b6-289b1037bd76
