Refactor from local to cloud storage part 1
This removes carrier wave and prepares model to expect to stream pdf
from a URI into the zip file.

This app currently only accepts PDFs so the mime type is hardcoded
in mets.rb. If we change that, this will need to be adjusted.

--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -24,7 +24,7 @@
 sub_one:
   title: 'Popcorn is a fruit.'
   agreed_to_license: true
-  documents: "[\"b_pdf.pdf\", \"a_pdf.pdf\"]"
+  documents: "[\"https://s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\", \"https://s3.amazonaws.com/mitquicksubmitdev/uploads/89ce4e35-8573-4def-8114-8767365c954e/a_pdf.pdf\"]"
   user: one
   uuid: 7648b505-af79-4a2b-abcb-2727f716100c
 
@@ -37,5 +37,5 @@ sub_two:
   doe: true
   grant_number: 'asdf123'
   agreed_to_license: true
-  documents: "[\"b_pdf.pdf\"]"
+  documents: "[\"https://s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\"]"
   uuid: a481170a-8337-4adc-b5b6-289b1037bd76
