Queue jobs for deposit on submission create
closes #21

Delayed job uses a db table to manage a simple job queue.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,15 @@
 Documentation:
   Enabled: false
 
+Rails:
+  Enabled: true
+
 AllCops:
-  RunRailsCops: true
+  TargetRubyVersion: 2.3
   Exclude:
     - db/**/*
     - config/**/*
+    - bin/delayed_job
 
 ClassLength:
   Exclude:
