--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -39,3 +39,11 @@ sub_two:
   agreed_to_license: true
   documents: "[\"//s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\"]"
   uuid: a481170a-8337-4adc-b5b6-289b1037bd76
+
+sub_deposited:
+    title: 'popcorn soup'
+    agreed_to_license: true
+    documents: "[\"//s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\", \"//s3.amazonaws.com/mitquicksubmitdev/uploads/89ce4e35-8573-4def-8114-8767365c954e/a_pdf.pdf\"]"
+    user: one
+    uuid: 7648b505-af79-4a2b-abcb-2727f716100c
+    status: 'deposited'
