Removes author, doe, grant_number
Provides field to store funders, but no functionality yet.

--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -7,9 +7,6 @@
 #  title             :string           not null
 #  journal           :string
 #  doi               :string
-#  author            :string
-#  doe               :boolean
-#  grant_number      :string
 #  agreed_to_license :boolean
 #  created_at        :datetime         not null
 #  updated_at        :datetime         not null
@@ -17,6 +14,8 @@
 #  status            :string
 #  handle            :string
 #  uuid              :string
+#  pub_date          :datetime
+#  funders           :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
@@ -33,9 +32,6 @@ sub_two:
   user: two
   journal: 'Journal of Popcorn Management'
   doi: 'doi:10.10.1038/nphys1170'
-  author: 'Lastname, Firstname'
-  doe: true
-  grant_number: 'asdf123'
   agreed_to_license: true
   documents: "[\"//s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\"]"
   uuid: a481170a-8337-4adc-b5b6-289b1037bd76
