Allow fake auth via ENV switch
All PR based apps get this setting by default

--- a/app.json
+++ b/app.json
@@ -51,6 +51,9 @@
     },
     "SWORD_USERNAME": {
       "required": true
+    },
+    "FAKE_AUTH_ENABLED": {
+      "value": "true"
     }
   },
   "addons": [
