--- a/test/fixtures/submissions.yml
+++ b/test/fixtures/submissions.yml
@@ -45,3 +45,12 @@ sub_deposited:
     user: one
     uuid: 7648b505-af79-4a2b-abcb-2727f716100c
     status: 'approved'
+
+sub_new_approved:
+    title: 'another bowl of popcorn'
+    documents: "[\"//s3.amazonaws.com/mitquicksubmitdev/uploads/ea656123-f24f-4b12-9c78-17399338a6d6/b_pdf.pdf\", \"//s3.amazonaws.com/mitquicksubmitdev/uploads/89ce4e35-8573-4def-8114-8767365c954e/a_pdf.pdf\"]"
+    funders: '["Department of Energy (DOE)"]'
+    pub_date: <%= 1.year.ago %>
+    user: one
+    uuid: 7648b505-af79-4a2b-abcb-2727f716100c
+    status: 'approved'
