--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: ruby
+cache:
+  bundler: true
 rvm:
   - 2.3.1
 sudo: false
-before_script: bundle exec rake fakes3:start
+env:
+  - SPEC_REPORTER=true
+script:
+  - bin/rails db:migrate RAILS_ENV=test
+  - bin/rails fakes3:start
+  - bin/rails test
